// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlreadySentDoctypeTile should match default snapshot 1`] = `
.c2 {
  min-width: calc(100% - 30px);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  font-size: 11px;
  font-weight: 600;
  line-height: 21px;
  text-transform: uppercase;
  color: #5d768f;
}

.c1 {
  height: 100%;
  min-width: 3.99px;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  background-color: rgba(63,81,181);
  border-radius: 0 4px 4px 0;
}

.c4 {
  padding: 5px 0;
}

.c0 {
  cursor: pointer;
  width: calc(100% - 30px);
  margin: 10px 0;
  border: 1px solid #e8eef3;
  border-radius: 4px;
  display: grid;
  grid-template-columns: 5px [color] auto [panel-item] 35px [chevron];
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 0.5rem;
  margin-left: 15px;
  margin-rigth: 10px;
}

.c3 {
  padding: 5px 15px 5px 5px;
  height: 21px;
  color: #1c2936;
  text-rendering: geometricPrecision;
  font-size: 14px;
  font-weight: 600;
  line-height: 21px;
}

<div
  className="c0"
  data-test-id="requirements-tile-Certificate of Incorporation"
>
  <div
    className="c1"
  />
  <div
    className="c2"
    onClick={[Function]}
  >
    <div
      className="c3"
      data-test-id="document-type-tile-name-Company Details"
    >
      Certificate of Incorporation
    </div>
    <div
      className="c4"
    >
      <p
        className="c5"
        data-test-id="document-type-tile-count-Company Details"
      >
        [ 3 ]
      </p>
    </div>
  </div>
  <i
    aria-hidden="true"
    className="chevron right large icon"
    data-test-id="document-type-tile-chevron-Company Details"
    onClick={[Function]}
    styles={
      Object {
        "float": "right",
      }
    }
  />
</div>
`;

exports[`AlreadySentDoctypeTile should match snapshot when document types is empty array 1`] = `
.c2 {
  min-width: calc(100% - 30px);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  font-size: 11px;
  font-weight: 600;
  line-height: 21px;
  text-transform: uppercase;
  color: #5d768f;
}

.c1 {
  height: 100%;
  min-width: 3.99px;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  background-color: rgba(63,81,181);
  border-radius: 0 4px 4px 0;
}

.c4 {
  padding: 5px 0;
}

.c0 {
  cursor: pointer;
  width: calc(100% - 30px);
  margin: 10px 0;
  border: 1px solid #e8eef3;
  border-radius: 4px;
  display: grid;
  grid-template-columns: 5px [color] auto [panel-item] 35px [chevron];
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 0.5rem;
  margin-left: 15px;
  margin-rigth: 10px;
}

.c3 {
  padding: 5px 15px 5px 5px;
  height: 21px;
  color: #1c2936;
  text-rendering: geometricPrecision;
  font-size: 14px;
  font-weight: 600;
  line-height: 21px;
}

<div
  className="c0"
  data-test-id="requirements-tile-Certificate of Incorporation"
>
  <div
    className="c1"
  />
  <div
    className="c2"
    onClick={[Function]}
  >
    <div
      className="c3"
      data-test-id="document-type-tile-name-Company Details"
    >
      Certificate of Incorporation
    </div>
    <div
      className="c4"
    >
      <p
        className="c5"
        data-test-id="document-type-tile-count-Company Details"
      >
        [ 0 ]
      </p>
    </div>
  </div>
  <i
    aria-hidden="true"
    className="chevron right large icon"
    data-test-id="document-type-tile-chevron-Company Details"
    onClick={[Function]}
    styles={
      Object {
        "float": "right",
      }
    }
  />
</div>
`;
